@@ -1,3 +1,9 @@
+2004-12-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add 'writepage' flag to 'fuse_file_info'.
+
+	* More comments in fuse.h
+
 2004-12-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add -D_FILE_OFFSET_BITS=64 to cflags provided by pkg-config
